# cqrs-with-components

./: README.md  migrations.sql  spin.toml
commands/: Cargo.toml
commands/src/: lib.rs  models.rs  persistence.rs
gateway/: Cargo.toml
gateway/src/: lib.rs
queries/: Cargo.toml
queries/src/: lib.rs  models.rs  persistence.rs
